--- a/LabManagementAppUI/src/main/resources/com/LabManagementAppUI/styles.css
+++ b/LabManagementAppUI/src/main/resources/com/LabManagementAppUI/styles.css
@@ -1,26 +1,52 @@
-.custom-button {
-    -fx-text-alignment: center;
-    -fx-background-color: #6096B4;
-    -fx-text-fill: #fff;
-    -fx-border-radius: 5px;
-    -fx-background-radius: 5px;
-    -fx-padding: 10px 20px;
+
+
+
+.button-21 {
+    -fx-background-color:
+            #c3c4c4,
+            linear-gradient(#d6d6d6 50%, white 100%),
+            radial-gradient(center 50% -40%, radius 200%, #e6e6e6 45%, rgba(230,230,230,0) 50%);
+    -fx-background-radius: 30;
+    -fx-background-insets: 0,1,1;
+    -fx-text-fill: black;
+    -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 3, 0.0 , 0 , 1 );
+    -fx-scale-x: 1.2; /* Adjust the scale factor as needed */
+    -fx-scale-y: 1.2; /* Adjust the scale factor as needed */
+}
+.button-21:hover {
+    -fx-background-color:
+            #c3c4c4,
+            linear-gradient(#d6d6d6 50%, #e6e6e6 100%),
+            radial-gradient(center 50% -40%, radius 200%, #f2f2f2 45%, rgba(242,242,242,0) 50%);
+}
+.button-11 {
+    -fx-background-color:
+            #F6F5F4,
+            rgba(0,0,0,0.05),
+            linear-gradient(#d4d2d4 0%, #d4d2d4 20%, #0b3d72 80%, #0b3d72 100%),
+            linear-gradient(#F6F5F4, #d4d2d4);
+    -fx-background-insets: 0,9 9 8 9,9,10,11;
+    -fx-padding: 15 30 15 30;
+    -fx-font-family: "Helvetica";
+    -fx-font-size: 18px;
+    -fx-text-fill: #311c09;
+    -fx-effect: innershadow( three-pass-box , rgba(0,0,0,0.1) , 2, 0.0 , 0 , 1);
 }
 
-.custom-button:hover {
-    -fx-background-color: #93BFCF;
+.button-11 Text {
+    -fx-effect: dropshadow( one-pass-box , rgba(255,255,255,0.5) , 0, 0.0 , 0 , 1);
 }
-.label {
-    -fx-font-weight: bold;
+.button-11:hover {
+    -fx-background-color:
+            #F6F5F4,
+            rgba(0,0,0,0.05),
+            linear-gradient(#909DB6, #45638b),
+            linear-gradient(#d4d2d4 0%, #d4d2d4 20%, #0b3d72 80%, #0b3d72 100%),
+            linear-gradient(#F6F5F4, #d4d2d4);
 }
-/* Increase the size of the tab buttons */
-.tab .tab-header-area {
-    -fx-max-height: 200px; /* Adjust the maximum height as needed to make the buttons larger */
-}
-
-/* Increase icon size and center it */
-.tab .tab-label .tab-icon {
-    -fx-scale-x: 2; /* Adjust the scale factor as needed */
-    -fx-scale-y: 2; /* Adjust the scale factor as needed */
-    -fx-alignment: center;
+.welcome-text {
+    -fx-font-size: 32px;
+    -fx-font-family: "Arial Black";
+    -fx-fill: #818181;
+    -fx-effect: innershadow( three-pass-box , rgba(0,0,0,0.7) , 6, 0.0 , 0 , 2 );
 }
